--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Pagina de Contato</p>
+    <p>Pagina de Contato de telefones</p>
 </body>
 </html>
